Prevent body layout shift

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,6 +1,18 @@
+body,
+html {
+  height: 100%;
+  width: 100%;
+  margin: 0;
+}
+
 body {
-  background-color: black;
-  color: white;
-  font-family: 'Courier Prime';
+  width: 100vw;
+  height: 100%;
+  min-height: 100%;
   box-sizing: border-box;
+  overflow-x: hidden;
+  overflow-y: hidden;
+  color: white;
+  background-color: black;
+  font-family: 'Courier Prime';
 }
